// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button Icon Only should render a circular icon 1`] = `
.c0 {
  position: relative;
  border-radius: 1.5rem;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
  width: 3rem;
  min-width: initial;
  padding: 0;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(1.5rem + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  <span
    className="anchor-icon star c1"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <path
          d="M4.398 15.508a1.15 1.15 0 0 1-1.646-1.196l.577-3.996L.673 7.33a1.15 1.15 0 0 1 .676-1.9l3.754-.603 1.865-3.789a1.15 1.15 0 0 1 2.064 0l1.865 3.789 3.754.603a1.15 1.15 0 0 1 .676 1.9l-2.653 2.982.623 3.987a1.15 1.15 0 0 1-1.638 1.212l-3.657-1.776-3.604 1.773z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </span>
</button>
`;

exports[`Component: Button Icon Only should render an icon only 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
  width: 3rem;
  min-width: initial;
  padding: 0;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  <span
    className="anchor-icon star c1"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <path
          d="M4.398 15.508a1.15 1.15 0 0 1-1.646-1.196l.577-3.996L.673 7.33a1.15 1.15 0 0 1 .676-1.9l3.754-.603 1.865-3.789a1.15 1.15 0 0 1 2.064 0l1.865 3.789 3.754.603a1.15 1.15 0 0 1 .676 1.9l-2.653 2.982.623 3.987a1.15 1.15 0 0 1-1.638 1.212l-3.657-1.776-3.604 1.773z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </span>
</button>
`;

exports[`Component: Button Sizes should render a large button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Sizes should render a small button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1rem;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c1 {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  margin: -0.25rem 0;
}

<button
  className="anchor-button c0"
  height={2.5}
  size="small"
>
  <div
    className="c1"
  />
  Text
</button>
`;

exports[`Component: Button Sizes should render an xlarge button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 2rem;
  font-size: 1rem;
  height: 3.5rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  height={3.5}
  size="xlarge"
>
  Text
</button>
`;

exports[`Component: Button Sizes should render an xsmall button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 0.5rem;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 4rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c1 {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  margin: -0.5rem 0;
}

<button
  className="anchor-button c0"
  height={2}
  size="xsmall"
>
  <div
    className="c1"
  />
  Text
</button>
`;

exports[`Component: Button Variant: Minimal should be disableable 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #D3D3D3;
  background-color: #D3D3D3;
  color: #808080;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
  cursor: not-allowed;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

<button
  className="anchor-button c0"
  disabled={true}
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Variant: Minimal should render an minimal button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Variant: Outline should be disableable 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #808080;
  background-color: transparent;
  color: #808080;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
  cursor: not-allowed;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  disabled={true}
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Variant: Outline should render an outline button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0074A6;
  background-color: transparent;
  color: #0074A6;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
  color: #FFFFFF;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Variant: Primary should have a disabled state 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #D3D3D3;
  background-color: #D3D3D3;
  color: #808080;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
  cursor: not-allowed;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  disabled={true}
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Variant: Primary should have a revealed state when flipped 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
  background-color: #F1F1F1;
  border: solid thin #F1F1F1;
  color: #595959;
  font-weight: bold;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Text
  <div
    className="flip-base"
  />
  <div
    className="flip-hover"
  />
</button>
`;

exports[`Component: Button Variant: Primary should render a primary button 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Text
</button>
`;

exports[`Component: Button Variant: Primary should render properly when flipped 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c0 > .flip-base,
.c0 > .flip-hover {
  border-top-right-radius: 4px;
  border-bottom-left-radius: 4px;
  position: absolute;
  top: -1px;
  right: -1px;
  width: 20px;
  height: 20px;
  content: "";
}

.c0 > .flip-base {
  -webkit-transition: 500ms ease opacity;
  transition: 500ms ease opacity;
  z-index: 2;
  background: linear-gradient(45deg,#66CCFF,#66CCFF 50%,#F1F1F1 0);
}

.c0 > .flip-hover {
  z-index: 1;
  background: linear-gradient(45deg,#0998D6,#0998D6 50%,#F1F1F1 0);
}

.c0:hover > .flip-base,
.c0:focus > .flip-base,
.c0:active > .flip-base {
  opacity: 0;
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Text
  <div
    className="flip-base"
  />
  <div
    className="flip-hover"
  />
</button>
`;

exports[`Component: Button Variant: Primary should render with an icon 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c0 > .anchor-icon {
  margin-right: 0.5rem;
}

.c1 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  line-height: 0;
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  <span
    className="anchor-icon star c1"
    scale="md"
  >
    <svg
      height={16}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <path
          d="M4.398 15.508a1.15 1.15 0 0 1-1.646-1.196l.577-3.996L.673 7.33a1.15 1.15 0 0 1 .676-1.9l3.754-.603 1.865-3.789a1.15 1.15 0 0 1 2.064 0l1.865 3.789 3.754.603a1.15 1.15 0 0 1 .676 1.9l-2.653 2.982.623 3.987a1.15 1.15 0 0 1-1.638 1.212l-3.657-1.776-3.604 1.773z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </span>
  Text
</button>
`;

exports[`Component: Button should be defined 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: #FFFFFF;
  padding: 0 1.5rem;
  font-size: 1rem;
  height: 3rem;
  min-width: 12.5rem;
}

.c0:hover,
.c0:focus,
.c0:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c0:focus:after {
  position: absolute;
  content: "";
  top: calc(-1px - 2px);
  left: calc(-1px - 2px);
  right: calc(-1px - 2px);
  bottom: calc(-1px - 2px);
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

<button
  className="anchor-button c0"
  height={3}
  size="large"
>
  Submit
</button>
`;
